# tztek_data_collection

./: CMakeLists.txt  main.cpp
configs/: cam_cfg.ini  cam_cfg_4+2.ini  cam_cfg_fisheye.ini  cam_cfg_test.ini  config_4+2.ini  config_cam6.ini  config_fisheye.ini  config_test.ini
protos/: error_code.proto  geometry.proto  gnss.proto  header.proto  imu.proto  message.proto  pointcloud.proto  pose.proto  sensor_image.proto
scripts/: compile.sh  config.ini  disk_test.sh  kill_all.sh  log.1677770064  nohup.out  prepare.sh  run.sh  start_all.sh
scripts/env_configure/: cam_configure.sh  cam_restart.sh  mount_device.sh
scripts/env_test/: disk_space.sh  disk_test.sh
src/: camera_collect_worker.cpp  camera_collect_worker.h  cfg.cpp  cfg.h  common.h  data_consumer.cpp  data_consumer.h  gnss_collect_worker.cpp  gnss_collect_worker.h  kernels.cu  kernels.h  lidar_collect_worker.cpp  lidar_collect_worker.h  pb_writer.cpp  pb_writer.h  rs232.c  syncv4l2.h
src/jetson/: NvBuffer.cpp  NvJpegEncoder.cpp
src/jetson/include/: NvLogging.h
tools/: gnss_extract.cpp  network_pub.cpp  network_sub.cpp  test.cpp  yuyv_2_jpeg.cpp
